[package]
name = "french_press"
version = "0.1.0"
authors = ["David Mally <djmally@gmail.com>"]

[dependencies]
uuid = "0.1"
matches = "0.1.2"
clippy = "0.0.45"

[dependencies.jsrs-common]
git = "https://github.com/rustoscript/js.rs-common.git"
rev = "8e17624"

[dependencies.js-types]
git = "https://github.com/rustoscript/js-types.git"
rev = "ae0af22"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
