[package]
name = "mem"
version = "0.1.0"
authors = ["David Mally <djmally@gmail.com>"]

[dependencies]
docopt = "0.6"
docopt_macros = "0.6"
rustc-serialize = "0.3"

[dependencies.french_press]
git = "https://github.com/rustoscript/french-press"
#path = "/home/djmally/src/penn/masters/thesis/rustoscript/french_press"

[dependencies.jsrs-common]
git = "https://github.com/rustoscript/js.rs-common.git"
#path = "/home/djmally/src/penn/masters/thesis/rustoscript/js.rs-common"
